--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,7 +143,7 @@ task-selection-row {
       width: 5rem;
       text-align: center; }
     task-selection-row > .task-header .task-title {
-      overflow: auto;
+      overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
       color: gray; }
